# c-algorithms

./: CMakeLists.txt
src/: CMakeLists.txt  main.c
src/searching/: binary_search.c  binary_search.h
src/sorting/: bubble_sort.c  bubble_sort.h  insertion_sort.c  insertion_sort.h  merge_sort.c  merge_sort.h  quick_sort.c  quick_sort.h  selection_sort.c  selection_sort.h
src/various/: factorial.c  factorial.h  fibonacci.c  fibonacci.h  string_concat.c  string_concat.h  string_permutations.c  string_permutations.h  utils.c  utils.h
test/: CMakeLists.txt
test/modules/: bubble_sort_test.c  searching_test.c  sorting_test.c  various_test.c
